@@ -1,6 +1,6 @@
 ---
 name: version
-version: 0.60
+version: 0.61
 author: ~
 abstract: ~
 license: perl
@@ -10,8 +10,8 @@ dynamic_config: 1
 provides:
   version:
     file: lib/version.pm
-    version: 0.60
+    version: 0.61
   version::vxs:
     file: vutil/vxs.pm
-    version: 0.60
+    version: 0.61
 generated_by: Module::Build version 0.2611
