@@ -9,8 +9,7 @@ use vars qw(@ISA $VERSION $CLASS );
 
 @ISA = qw(DynaLoader);
 
-$VERSION = "0.60";
-$VERSION = eval $VERSION;
+$VERSION = 0.61;
 
 $CLASS = 'version::vxs';
 
